fix body layout overflow

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -13,6 +13,15 @@
   --color-dark-gray: "#6A6A6A";
 }
 
+body,
+html {
+  min-width: 100%;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 body {
   background-image: radial-gradient(
     800px circle at top left,
